# order_book_dex

./: .gitignore  Anchor.toml  Cargo.toml
app/open-book-dex/: bun.lockb  package.json
app/order-book-dex/: .gitignore  bun.lockb  package.json  tailwind.config.ts
backend/: Cargo.toml  scratch_pad.sql
backend/migrations/: 20241015110238_core_tables.sql  init.sql
backend/mock/: order_book_config_insert.sql  order_position_config_insert.sql  order_position_insert.sql  real_time_trade_data_insert.sql
backend/mock_sql/: get_current_example.sql  get_trade_pair_list.sql  limit_order_example.sql  market_insert.sql  market_order_book_example.sql  market_order_history_example.sql  market_order_history_insert.sql  order_book_config_insert.sql  order_position_config_insert.sql  order_position_insert.sql  real_time_trade_data_insert.sql  scratch_pad.sql  tables.sql  trade_data_24h_example.sql  trade_data_24h_insert.sql  trade_pair_list_example.sql
backend/src/: main.rs  services.rs  websocket_client.rs
backend/src/db/: database_notes.txt  mod.rs  models.rs
backend/src/transactions/: cancel_limit_order.rs  constants.rs  create_market_order.rs  create_trade_pair.rs  error.rs  execute_market_order.rs  mod.rs  open_limit_order.rs  pdas.rs  test_util.rs  util.rs
design/: doc.excalidraw  layout.excalidraw
dev-notes/: database.txt  notes.txt
experiment/: mock.js
tests/: experiment.ts  order_book_dex.ts
token/: 3MoaEdRWaECcrWPfNLTsGUexQryrBe7XdW5jwSjwfxeo  3R9sMSPwPBJEpF2d1yy4Sjn7XFUvvsTjQrhQ1euvMsmR  42FM1S6j8cBkuuHcD63BrrhFgn6k3N53k39oLuuvhyb6  48AzCyUN6aEKNHGmDi785AKMnjoSXmyVkx2RGB6qjnxQ  93iso9Menx4Y6kwE1kF3z4AuA1FMirTgrUgtV3YyVmK7  9G4FwtEmzCG4Fnuco87TNrB6ZtYmgvrKv7qj4wT9zjfu  A36jJdQvdt9XTbkTkgQsfnFwVgNrpuBErirfMjS45ci3  ALtoPNMcc3LfNj17hax3iwVz8dHiCit2oEpMQN4uiKh3  AyGCswE7kW4ah8zuASJQmk7FT3tS29c19NXimX9X9Bpb  B95rGaG9uuC7vPKxn9Kwab2KWBhi1mjhpaPhrYrAuE3z  BBtS8nCJHQuJDGYwvHvcu9TBiDJExq4YfRJhLm5ubum3  CmGo5gx2ud8MBdz6e52rJnTYmQ7L8D9dqrZnje9Ttt9a  DzJaF4xWqKt2DFUKhzej6bQv91jsNhojMff3hBS8uvXH  J6M7LYnCukKHKuaNwFX9A8vvLsoYuttrH71tLg3ShC4Q
(+156 files in other folders)
