[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
futures-util = "0.3.31"
serde = "1.0.210"
solana-pubsub-client = "2.0.13"
solana-rpc-client-api = "2.0.13"
sqlx = { version = "0.8.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
