[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
anyhow = "1.0.89"
futures-util = "0.3.31"
serde = "1.0.210"
solana-pubsub-client = "1.18.25"
solana-rpc-client-api = "1.18.25"
sqlx = { version = "0.8.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
] }

# sqlx = "0.8.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
# shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
