[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
anyhow = "1.0.89"
futures-util = "0.3.31"
serde = "1.0.210"
solana-pubsub-client = "1.18.25"
solana-rpc-client-api = "1.18.25"

sqlx = { version = "0.8.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
] }

tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.22.1"
solana-sdk = "1.18.25"
chrono = "0.4.38"
clokwerk = "0.4.0"

order_book_dex = { path = "../programs/order_book_dex" }
anchor-lang = "0.30.1"
serde_json = "1.0.132"
solana-client = "1.18.25"
solana-program-test = "1.18.25"
solana-test-framework = { git = "https://github.com/halbornteam/solana-test-framework", branch = "solana1.18", features = [
    "anchor",
] }
spl-associated-token-account = "3.0.4"
thiserror = "1.0.64"
